--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,133 @@
-body {
+/* add font */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  outline: 0;
+  border: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+}
+:root {
+  --bg-color: #fffaf5;
+  --color-bg-variant: #f0e7d8;
+  --color-primary: #8e44ad;
+  --color-primary-variant: rgba(142, 68, 173, 0.4);
+  --color-white: #1b1b1b;
+  --color-light: rgba(0, 0, 0, 0.6);
+
+  --transition: all 400ms ease;
+
+  --container-width-lg: 57%;
+  --container-width-md: 86%;
+  --container-width-sm: 90%;
+}
+html {
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+body {
+  background-color: var(--bg-color);
+  color: var(--color-white);
+  font-family: "Segoe UI", Roboto, Arial, "Noto Sans", sans-serif;
+  line-height: 1.7;
+}
+/* =========== GENEARL STYLE ========== */
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 500;
+  font-family: "Georgia", "Times New Roman", serif;
+}
+h2 {
+  font-size: 2.5rem;
+}
+section {
+  margin-top: 8rem;
+}
+section > h2,
+section > h5 {
+  text-align: center;
+  color: var(--color-light);
+}
+section > h2 {
+  color: var(--color-primary);
+  margin-bottom: 3rem;
+}
+.text-light {
+  color: var(--color-light);
+}
+a {
+  color: var(--color-primary);
+  transition: var(--transition);
+}
+a:hover {
+  color: var(--color-white);
+}
+.btn {
+  width: max-content;
+  display: inline-block;
+  color: var(--color-primary);
+  padding: 0.75rem 1.2rem;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  border: 1px solid var(--color-primary);
+  transition: var(--transition);
+  text-transform: capitalize;
+}
+.unslct-btn {
+  cursor: no-drop;
+  user-select: none;         /* Prevents text selection */
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none;    /* Firefox */
+  -ms-user-select: none;     /* IE/Edge */
+  outline: none;             /* Removes focus outline */
+  border: none;
+  padding: 0.75rem 1.2rem;
+  /* background-color: #8e44ad78; */
+  color: var(--color-primary);
+  font-size: 16px;
+  border-radius: 5px;
+}
+.btn:hover {
+  background-color: var(--color-white);
+  color: var(--bg-color);
+  border-color: transparent;
+}
+.btn-praimry {
+  background-color: var(--color-primary);
+  color: var(--bg-color);
+}
+img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+section {
+  margin-top: 8rem;
+}
+/* ==============  MEIDA QUIRY (MIDIUM SCREENS) ============= */
+@media (max-width: 1024px) {
+  .container {
+    width: var(--container-width-lg);
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* ==============  MEIDA QUIRY (SMALL SCREENS) ============= */
+@media (max-width: 600px) {
+  .container {
+    width: var(--container-width-sm);
+  }
+
+  section > h2 {
+    margin-bottom: 2rem;
+  }
 }
